[package]
name = "rust_db_macro"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
allow_attributes = "warn"
missing-const-for-fn = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"
get-unwrap = "warn"
unwrap-used = "warn"
unwrap_in_result = "warn"
map_unwrap_or = "warn"

[lib]
proc-macro = true

[dependencies]
syn = "=2.0"
quote = "=1.0"
proc-macro2 = "=1.0"
